# data-engineering-zoomcamp

./: README.md
homeworks/module-1-hw/: README.md  import_data.ipynb  main.py  pyproject.toml
pipeline/: Dockerfile  docker-compose.yaml  ingest_data.py  notebook.ipynb  pipeline.py
