[project]
name = "module-1-hw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastparquet>=2025.12.0",
    "jupyter>=1.1.1",
    "pandas>=3.0.0",
    "psycopg2>=2.9.11",
    "pyarrow>=23.0.0",
    "sqlalchemy>=2.0.46",
]
